# RRSS

./: .env.example  .gitignore  README.md  pyproject.toml
src/rrss/: __init__.py  config.py  main.py
src/rrss/ai/: __init__.py  insights.py
src/rrss/analytics/: __init__.py  comparator.py  metrics.py  projections.py
src/rrss/cli/: __init__.py  app.py
src/rrss/collectors/: __init__.py  base.py  facebook.py  instagram.py  tiktok.py
src/rrss/dashboard/: __init__.py  app.py
src/rrss/dashboard/components/: __init__.py  charts.py  metrics_cards.py
src/rrss/dashboard/pages/: __init__.py  comparison.py  facebook.py  instagram.py  overview.py  projections.py  tiktok.py
src/rrss/models/: __init__.py  base.py  facebook.py  instagram.py  tiktok.py
src/rrss/storage/: __init__.py  database.py
tests/test_analytics/: test_comparator.py  test_metrics.py
tests/test_models/: test_base.py
