[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rrss"
version = "0.1.0"
description = "Agente de análisis de métricas para redes sociales (TikTok, Instagram, Facebook)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mauricio Jacob Martínez Lagos"}
]

dependencies = [
    "httpx>=0.27.0",
    "instaloader>=4.11",
    "facebook-scraper>=0.2.60",
    "TikTokApi>=6.3.0",
    "openai>=1.40.0",
    "plotly>=5.22.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
rrss = "rrss.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
